2012-03-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSPrivate.h: Change hash function args and add new functions
        * for incremental hash.
        * Source/NSString.m: Update to use the private hash function introduced
        for NSSortdescriptor.
        * Source/GSString.m: ditto.
        * Source/NSSortDescriptor.m: Update for new function arguments.
        * Source/GSPrivateHash.m: Add alternative version of hash functions
        (old code plus new public domain murmurhash3 code).
        * Source/GNUmakefile: Build alternative hash functions.
        build with OLDHASH defined to 0 to get new alternatives.

2012-03-10  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileManager.m:
        Fix some autorelease pool management issues.

2013-03-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Tests/base/NSFileManager/general.m
	  remove accidently snucked in header

2013-03-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

        * Headers/Foundation/NSFileManager.h:
        * Source/NSFileManager.m:
        * Tests/base/NSFileManager/general.m:
        Implement methods forcoping/moving file URLs

2013-03-05  Larry Campbell <lcampbel@akamai.com>

        * Source/NSFileManager.m: Fix for ([-contentsEqualAtPath:andPath:])
        compare contents of regular files in subdirectories.

2013-03-05 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

        * Source/NSFileManager.m:
        * Headers/Foundation/NSFileManager.h:
        ([createDirectoryAtURL:withIntermediateDirectories:attributes:error:])
        implemented.
        Also, for OSX compatibility, RFM 'fixed' the ...error: methods to
        leave the error value unmodified in the case where no error occurs.

2013-03-03 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* Source/NSKeyValueObserving.m
	* Source/NSXMLParser.m
	  char is unsigned on macppc, so don't compare it 
	  against negative values
